tests: fix for Java 21 method